--- a/animals.html
+++ b/animals.html
@@ -33,5 +33,20 @@
         <div class="col-md">Monkey</div>
     </div>
     <div> The row with animal name will break first, because of the class col-md is given and it targets laptops</div> 
+    <br>
+    <div class="container">
+        <img src="giraffi.jpg" class="img-fluid" height="400" width="400">
+        <img src="leopard.jpg" class="img-fluid" height="400" width="400">
+        <img src="monkey.jpg" class="img-fluid" height="400" width="400">
+    </div>
+    <br>
+    <br>
+    <div>
+        <img src="giraffi.jpg" class="img-thumbnail" height="400" width="400" alt="giraffi">
+        <img src="leopard.jpg" class="img-thumbnail" height="400" width="400" alt="leopard">
+        <img src="monkey.jpg" class="img-thumbnail" height="400" width="400" alt="monkey">
+    </div>
+    <br>
+
  </body>
 </html>
