--- a/animals.html
+++ b/animals.html
@@ -41,7 +41,7 @@
     </div>
     <br>
     <br>
-    <div>
+    <div class="container">
         <img src="giraffi.jpg" class="img-thumbnail" height="400" width="400" alt="giraffi">
         <img src="leopard.jpg" class="img-thumbnail" height="400" width="400" alt="leopard">
         <img src="monkey.jpg" class="img-thumbnail" height="400" width="400" alt="monkey">
