--- a/animals.html
+++ b/animals.html
@@ -48,5 +48,55 @@
     </div>
     <br>
 
+    <table class="table table-striped">
+        <caption-top>Letter,Animal,City,Car</caption-top>
+        <thead>
+          <tr class="table-warning">
+            <th scope="col">Letter</th>
+            <th scope="col">Animal</th>
+            <th scope="col">city</th>
+            <th scope="col">car</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr class="table-danger">
+            <th scope="row">L</th>
+            <td>Leopard</td>
+            <td>ladakh</td>
+            <td>lamborghini</td>
+          </tr>
+          <tr class="table-primary">
+            <th scope="row">I</th>
+            <td>ibex</td>
+            <td>Indianappolies</td>
+            <td>indica</td>
+          </tr>
+          <tr class="table-default">
+            <th scope="row">N</th>
+            <td>Narwhal</td>
+            <td>newyork</td>
+            <td>nissan</td>
+          </tr>
+          <tr class="table-success">
+            <th scope="row">G</th>
+            <td>giraffi</td>
+            <td>guntur</td>
+            <td>gasycar</td>
+          </tr>
+          <tr class="table-info">
+            <th scope="row">A</th>
+            <td>ant</td>
+            <td>Ahmedabad</td>
+            <td>acura</td>
+          </tr>
+          <tr class="table-light">
+            <th scope="row">M</th>
+            <td>monkey</td>
+            <td>mahabubnagar</td>
+            <td>nissan</td>
+          </tr>
+        </tbody>
+      </table>
+
  </body>
 </html>
