--- a/animals.html
+++ b/animals.html
@@ -14,6 +14,24 @@
 
  </head>
  <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Interesting Animals</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="plane.html">Plane</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="train.html">Train</a>
+              </li>
+          </div>
+        </div>
+      </nav>
+
    <h1>Animals by Archana Lingampally</h1>
    <div class="container">
     <div class="row">
@@ -128,7 +146,7 @@
            </div>
     </div>
         <br>
-        
+
         <div class="dropdown">
             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                 Dropdown button
@@ -139,6 +157,8 @@
             </div>
            </div>
 
+        <br>
+        
 
  </body>
 </html>
