--- a/animals.html
+++ b/animals.html
@@ -158,6 +158,22 @@
            </div>
 
         <br>
+        <form>
+            <div class="form-group">
+              <label for="exampleInputEmail1" class="form-label">Email address</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+              <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+            </div>
+            <div class="form-group">
+              <label for="Animal" class="form-label">Enter the Animal</label>
+              <input type="text" class="form-control">
+            </div>
+            <div class="form-check">
+              <input type="checkbox" class="form-check-input" id="exampleCheck1">
+              <label class="form-check-label" for="exampleCheck1">Sign up for newsletter?</label>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
         
 
  </body>
