--- a/animals.html
+++ b/animals.html
@@ -174,6 +174,32 @@
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
+
+        <div class="container">
+            <div class="card" style="width: 18rem;">
+                <img src="giraffi.jpg" class="card-img-top" alt="giraffi">
+                <div class="card-body">
+                  <h5 class="card-title">giraffi</h5>
+                  <p class="card-text">The giraffe (Giraffa) is an African artiodactyl mammal, the tallest living terrestrial animal and the largest ruminant. It is traditionally considered to be one species, Giraffa camelopardalis, with nine subspecies.</p>
+                  <a href="https://en.wikipedia.org/wiki/Giraffe" class="btn btn-primary">click here for more Info</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="leopard.jpg" class="card-img-top" alt="Leopard">
+                <div class="card-body">
+                  <h5 class="card-title">Leopard</h5>
+                  <p class="card-text">The leopard (Panthera pardus) is one of the five extant species in the genus Panthera, a member of the cat family, Felidae.[4] It occurs in a wide range in sub-Saharan Africa, in some parts of Western and Central Asia, Southern Russia, and on the Indian subcontinent to Southeast and East Asia.</p>
+                  <a href="https://en.wikipedia.org/wiki/Leopard" class="btn btn-primary">click here for more Info</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="monkey.jpg" class="card-img-top" alt="monkey">
+                <div class="card-body">
+                  <h5 class="card-title">monkey</h5>
+                  <p class="card-text">Monkey is a common name that may refer to most mammals of the infraorder Simiiformes, also known as the simians. Traditionally, all animals in the group now known as simians are counted as monkeys except the apes, a grouping known as paraphyletic; however in the broader sense based on cladistics, apes (Hominoidea) are also included, making the terms monkeys and simians synonyms in regard of their scope.</p>
+                  <a href="https://en.wikipedia.org/wiki/Monkey" class="btn btn-primary">click here for more Info</a>
+                </div>
+            </div>
         
 
  </body>
